<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activity"
            type="com.farhan.sps.activities.LoginActivity" />
    </data>


    <RelativeLayout
        android:background="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_marginTop="@dimen/_40sdp"
            android:id="@+id/logo"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_140sdp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_16sdp"
            android:contentDescription="@string/desc"
            android:src="@drawable/app_ico" />

        <TextView


            android:id="@+id/app_title"
            android:layout_marginBottom="@dimen/_32sdp"
            android:fontFamily="@font/roboto_medium"
            android:layout_below="@id/logo"
            android:textAlignment="center"
            android:textSize="@dimen/_32ssp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_wrapper"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@id/app_title"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginVertical="@dimen/_4sdp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:drawablePadding="@dimen/_8sdp"
                android:drawableStart="@drawable/email_ico"
                android:layout_height="match_parent"
                android:background="@drawable/ic_edittext_bg"
                android:hint="@string/email_address"
                android:inputType="text"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_wrapper"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@id/email_wrapper"
            android:layout_marginHorizontal="@dimen/_12sdp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            android:layout_marginTop="@dimen/_4sdp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:drawablePadding="@dimen/_8sdp"
                android:drawableStart="@drawable/password_ico"
                android:layout_height="match_parent"
                android:background="@drawable/ic_edittext_bg"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_wrapper"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:text="@string/login"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_20ssp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc"
                android:src="@drawable/arrow_forward_white"
                app:backgroundTint="@color/colorPrimaryDark" />


        </LinearLayout>


    </RelativeLayout>


</layout>
